--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
+    "typescript-plugin-css-modules": "^4.1.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.7.4"
