--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-	"typescript.tsdk": "node_modules\\typescript\\lib"
+	"typescript.tsdk": "node_modules\\typescript\\lib",
+	"i18n-ally.enabledFrameworks": [
+		"react",
+		"i18next",
+		"general"
+	],
+	"i18n-ally.localesPaths": [
+		"public/locales",
+		"src/shared/config/i18n"
+	],
+	"i18n-ally.sourceLanguage": "ru",
+	"i18n-ally.displayLanguage": "ru",
+	"i18n-ally.keystyle": "nested",
 }
