--- a/tsconfig.json
+++ b/tsconfig.json
@@ -101,7 +101,14 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
-    "plugins": [{"name":"typescript-plugin-css-modules"}]
+    "plugins": [
+      {
+        "name": "typescript-plugin-css-modules",
+        "options": {
+          "classnameTransform": "camelCaseOnly",
+        }
+      }
+    ]
   },
   "ts-node": {
     "compilerOptions": {
