add husky pre-commit

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
-    "unit": "jest --config ./config/jest/jest.config.ts"
+    "unit": "jest --config ./config/jest/jest.config.ts",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -55,7 +56,8 @@
     "typescript-plugin-css-modules": "^4.1.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "husky": "^8.0.0"
   },
   "dependencies": {
     "i18next": "^21.6.11",
