test settings: - jest (allowed absolute imports) - set up jest-dom - set up react for jest - set up scss modules for jest
+ small test for Button.tsx

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -114,5 +114,10 @@
     "compilerOptions": {
       "module": "CommonJS"
     }
-  }
+  },
+  "include": [
+    "./src/**/*.tsx",
+    "./src/**/*.ts",
+    "./config/jest/jest-setup.ts"
+  ],
 }
