updated workflow for testing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,5 +59,8 @@ jobs:
         run: npm run test:unit
       - name: build storybook
         run: npm run storybook:build
+        id: storybook
+        if: always()
       - name: screenshot testing
+        if: ${{ failure() && steps.storybook.conclusion != 'failure'}}
         run: npm run test:ui:ci
