--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki approve",
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
-    "test:ui:report": "npm run test:ui && npm run test:ui:json && npm run test:ui:html",
+    "test:ui:report": "echo DON'T FORGET TO RUN \"test:ui\" && npm run test:ui:json && npm run test:ui:html",
     "test:ui:json":"node scripts/generate-visual-json-report.js",
     "test:ui:html": "npx reg-cli --from .loki/report.json --report .loki/report.html",
     "prepare": "husky install",
