--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:ui:ok": "npx loki approve",
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
     "test:ui:report": "echo DON'T FORGET TO RUN \"test:ui\" && npm run test:ui:json && npm run test:ui:html",
-    "test:ui:json":"node scripts/generate-visual-json-report.js",
+    "test:ui:json": "node scripts/generate-visual-json-report.js",
     "test:ui:html": "npx reg-cli --from .loki/report.json --report .loki/report.html",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006 -c ./config/.storybook",
@@ -87,12 +87,14 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1"
   },
   "loki": {
