--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.0",
@@ -91,6 +92,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
+    "axios": "^0.26.1",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
@@ -104,7 +106,7 @@
     "**/*.{ts,tsx}": [
       "eslint --fix --max-warnings=0"
     ],
-    "**/*.{css,scss}":[
+    "**/*.{css,scss}": [
       "stylelint --fix"
     ]
   },
